2009-10-29  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_option.c: Add UI for the lrc path and filename

2009-10-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c : Adds LRC pattern support

	* src/ol_music_info.c: FIX: copy URI when copying music_info

	* src/ol_path_manage.c: Utilities to expand LRC path and filename patterns

	* src/ol_config_property.h: New config entry for lrc path and filename pattern

2009-10-27  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_banshee.c : All player operation is supported in Banshee
	* src/ol_player_songbird.c: All player operation is supported in Songbird
	* src/ol_player_exaile03.c: All player operation but seek is supported in Exaile 0.3
	* src/ol_player_amarok2.c : All player operation is supported in Amarok2
	* src/ol_player_audacious.c : All player operation is supported in Audacious
	* src/tests/ol_player_test.c: New test for player
	* src/ol_player_mpris.c : All player operation is supported in MPRIS

2009-10-25  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c (ol_osd_window_update_lyric_pixmap): Remove the NULL check for pixmaps which is wrong

2009-10-23  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player.h: Adds new interface to control players

2009-10-16  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: Fixed some warning caused by NULL pointer

2009-10-14  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: Multi-thread lyric downloading and lyric choose ui is implemented

	* src/ol_lrc_fetch_module.h: New module implements multithread lyric downloading.

2009-10-11  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_main.c: Download lrc files in seperate child processes

2009-10-10  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_player_exaile03.c: Add exaile 0.3 support

2009-09-24  Tiger Soldier  <tigersoldi@gmail.com>

	* Add options for translucent on mouse move

	* src/ol_player_songbird.c: Songbird support with MPRIS plugin
